# rgbd_camera_calibration

./: CMakeLists.txt  package.xml
cfg/: BlobDetector.cfg
include/rgbd_camera_calibration/: checkerboard_detector.h  circles_grid_detector.h  pattern_detector.h  rgbd_processor.h
launch/: calibrate_depth.launch
src/: checkerboard_detector.cpp  circles_grid_detector.cpp  depth_calibrator.cpp  rgbd_camera_check.cpp  rgbd_depth_calibrator.cpp
